Basic Structure and image

--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 </head>
 <body>
     <h1>Classes</h1>
+    <p>
+        <img src="pencils.jpg" width="500" height="350">
+    </p>
 </body>
 </html>
